<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/main_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#39E1FD"
        app:tabSelectedTextColor="@color/colorAccent"
        app:tabTextColor="#000000">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_tab"/>
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_browse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/browse_tab"/>
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_maintenance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maintenance_tab"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/main_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backGround" />

</LinearLayout>