<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="2dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_car_liner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >


        <ImageView
            android:id="@+id/card_icon"
            android:layout_width="112dp"
            android:layout_height="101dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/card_icon_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/laptop_icon" />

        <TextView
            android:id="@+id/card_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/card_name"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/card_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card_icon"
            app:layout_constraintTop_toTopOf="@+id/card_icon" />

        <TextView
            android:id="@+id/card_desc"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="top|start"
            android:scrollbars="horizontal"
            android:text="@string/card_desc"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/card_price"
            app:layout_constraintStart_toStartOf="@+id/card_icon"
            app:layout_constraintTop_toBottomOf="@+id/card_icon" />

        <TextView
            android:id="@+id/card_price"
            android:layout_width="101dp"
            android:layout_height="106dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/card_price"
            android:textColor="#2F8A32"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/card_desc"
            app:layout_constraintEnd_toEndOf="@+id/card_name"
            app:layout_constraintTop_toBottomOf="@+id/card_name"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>