<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/maint_frame"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MaintinanceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/maintenance_search_btn"
            app:layout_constraintEnd_toEndOf="@+id/log_user"
            app:layout_constraintStart_toStartOf="@+id/log_user"
            app:layout_constraintTop_toBottomOf="@+id/log_pass" />

        <EditText
            android:id="@+id/log_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text=""
            android:hint="@string/hint_email"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/log_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text=""
            android:hint="@string/hint_password"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/log_user"
            app:layout_constraintStart_toStartOf="@+id/log_user"
            app:layout_constraintTop_toBottomOf="@+id/log_user" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>